# gba-emulator-rust

./: .gitignore  ARCHITETTURA_MODULARE.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  GUIDA_ARCHITETTURA.md  LICENSE  MAPPA_PROGETTO.md  QUICKSTART.md  README.md  SDL2_SETUP.md  build.ps1  download_sdl2.ps1
gba-arm7tdmi/: Cargo.toml
gba-arm7tdmi/src/: arm.rs  cpu.rs  cpu_tests.rs  lib.rs  registers.rs  thumb.rs
gba-arm7tdmi/src/instructions/: alu.rs  branch.rs  load_store.rs  mod.rs
gba-core/: Cargo.toml
gba-core/src/: apu.rs  bios.rs  bios_tests.rs  bus.rs  cartridge.rs  dma.rs  dma_tests.rs  emulator.rs  input.rs  interrupt.rs  lib.rs  memory.rs  ppu.rs  save.rs  save_tests.rs  timer.rs  timer_tests.rs
gba-core/src/apu_impl/: direct_sound.rs  mixer.rs  mod.rs  registers.rs
gba-core/src/apu_impl/channels/: mod.rs  noise.rs  square.rs  wave.rs
gba-core/src/bios_impl/: calls.rs  constants.rs  mod.rs
gba-core/src/dma_impl/: channel.rs  constants.rs  mod.rs  types.rs
gba-core/src/ppu_impl/: affine.rs  blending.rs  constants.rs  mod.rs  mode0.rs  mode3.rs  mode4.rs  mode5.rs  sprites.rs  types.rs  windows.rs
gba-core/src/save_impl/: constants.rs  detection.rs  eeprom.rs  flash.rs  mod.rs  sram.rs  types.rs
gba-core/src/timer_impl/: constants.rs  counter.rs  mod.rs  registers.rs
gba-core/tests/: ppu_mode3_test.rs  ppu_visual_test.rs
gba-frontend-sdl2/: Cargo.toml
gba-frontend-sdl2/src/: input.rs  main.rs  ui.rs
