[workspace]
members = [
    "gba-core",
    "gba-arm7tdmi",
    "gba-frontend-sdl2",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["GBA Emulator Team"]
license = "MIT"

[workspace.dependencies]
# Dipendenze condivise
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
bitflags = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Performance & ottimizzazione
rayon = "1.8"              # Parallelizzazione
parking_lot = "0.12"       # Lock più veloci
ahash = "0.8"              # Hash più veloce

# Frontend SDL2
sdl2 = "0.37"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[profile.bench]
inherits = "release"
debug = true
