[package]
name = "gba-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gba-arm7tdmi = { path = "../gba-arm7tdmi" }

anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
bitflags.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
ahash.workspace = true
