[package]
name = "gba-frontend-sdl2"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "gba-emulator"
path = "src/main.rs"

[dependencies]
gba-core = { path = "../gba-core" }

sdl2.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
